--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # Level for loggers on classes inside the root package "netgloo" (and its
 # sub-packages)
 # Available levels are: TRACE, DEBUG, INFO, WARN, ERROR, FATAL, OFF
-logging.level.com.hextaz.pldagile.model = INFO
+logging.level.com.codinsa.finale = INFO
 
 logging.file = fichierLog.log
