--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,5 @@
 # sub-packages)
 # Available levels are: TRACE, DEBUG, INFO, WARN, ERROR, FATAL, OFF
 logging.level.com.codinsa.finale = INFO
-
+server.port = 8080
 logging.file = fichierLog.log
